syntax = "proto3";

package usermgmt;

option go_package = "gouser/proto";

service UserManagementServices {
  rpc CreateNewUser (UserRequest) returns (UserResponse) {};
  rpc GetUsers(GetUsersParamRequest) returns (UserListResponses) {};
}

message UserRequest {
  string name = 1;
  int32 age = 2;
}

message UserResponse {
  string name = 1;
  int32 age = 2;
  int32 id = 3;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3;
}

message GetUsersParamRequest {
}

message UserListResponses {
  repeated User users = 1;
}
